# pkg/bss-workplace-api/bss_workplace_api.pb.gw.go
@@ -205,6 +205,40 @@ func local_request_BssWorkplaceApiService_RemoveWorkplaceV1_0(ctx context.Contex
 
 }
 
+func request_BssWorkplaceApiService_UpdateWorkplaceV1_0(ctx context.Context, marshaler runtime.Marshaler, client BssWorkplaceApiServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateWorkplaceV1Request
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.UpdateWorkplaceV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_BssWorkplaceApiService_UpdateWorkplaceV1_0(ctx context.Context, marshaler runtime.Marshaler, server BssWorkplaceApiServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateWorkplaceV1Request
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.UpdateWorkplaceV1(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterBssWorkplaceApiServiceHandlerServer registers the http handlers for service BssWorkplaceApiService to "mux".
 // UnaryRPC     :call BssWorkplaceApiServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -300,6 +334,29 @@ func RegisterBssWorkplaceApiServiceHandlerServer(ctx context.Context, mux *runti
 		}
 
 		forward_BssWorkplaceApiService_RemoveWorkplaceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("PUT", pattern_BssWorkplaceApiService_UpdateWorkplaceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/ozonmp.bss_workplace_api.v1.BssWorkplaceApiService/UpdateWorkplaceV1", runtime.WithHTTPPathPattern("/v1/workplaces"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_BssWorkplaceApiService_UpdateWorkplaceV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_BssWorkplaceApiService_UpdateWorkplaceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -424,6 +481,26 @@ func RegisterBssWorkplaceApiServiceHandlerClient(ctx context.Context, mux *runti
 
 	})
 
+	mux.Handle("PUT", pattern_BssWorkplaceApiService_UpdateWorkplaceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/ozonmp.bss_workplace_api.v1.BssWorkplaceApiService/UpdateWorkplaceV1", runtime.WithHTTPPathPattern("/v1/workplaces"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_BssWorkplaceApiService_UpdateWorkplaceV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_BssWorkplaceApiService_UpdateWorkplaceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -435,6 +512,8 @@ var (
 	pattern_BssWorkplaceApiService_ListWorkplacesV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "workplaces"}, ""))
 
 	pattern_BssWorkplaceApiService_RemoveWorkplaceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "workplaces", "workplace_id"}, ""))
+
+	pattern_BssWorkplaceApiService_UpdateWorkplaceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "workplaces"}, ""))
 )
 
 var (
@@ -445,4 +524,6 @@ var (
 	forward_BssWorkplaceApiService_ListWorkplacesV1_0 = runtime.ForwardResponseMessage
 
 	forward_BssWorkplaceApiService_RemoveWorkplaceV1_0 = runtime.ForwardResponseMessage
+
+	forward_BssWorkplaceApiService_UpdateWorkplaceV1_0 = runtime.ForwardResponseMessage
 )
